kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dscribeclient 
  name: dscribeclient
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: dscribeclient
