kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
  #   kubernetes.io/ingress.class: nginx
  name: dscribeclient
  namespace: default
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - backend:
          serviceName: dscribeclient
          servicePort: 80
        path: /dscribe
  # tls:
  # - hosts:
  #   - yourdomain.com
  #   secretName: echo-tls-preview
